--- a/CSharp Discord Bot.csproj
+++ b/CSharp Discord Bot.csproj
@@ -9,7 +9,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="config.json" />
     <None Remove="resources\HatData.json" />
+    <None Remove="secrets.json" />
+    <None Remove="version.json" />
   </ItemGroup>
 
   <ItemGroup>
@@ -18,7 +21,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Include="config.json" />
     <EmbeddedResource Include="resources\HatData.json" />
+    <EmbeddedResource Include="secrets.json" />
+    <EmbeddedResource Include="version.json" />
   </ItemGroup>
+
+  <ProjectExtensions><VisualStudio><UserProperties /></VisualStudio></ProjectExtensions>
 
 </Project>
